Finished except for button links to outside sources and some spacing issues.

--- a/style/index.css
+++ b/style/index.css
@@ -146,13 +146,25 @@ body {
 nav {
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  top: 0;
+  background: transparent;
+  left: 0;
 }
 
 .navbtn {
-  background-color: rgb(4, 40, 49);
+ background-color: rgb(4, 40, 49);
   border: hidden;
-  border-radius: 1rem;
-  padding: 1%;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-right: 50px;
+  height: 50px;
+  width: 600px;
 }
 
 #top {
@@ -163,12 +175,16 @@ nav {
   background-size: 100%;
   padding: 13%;
   margin: 2%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .title {
   font-family: "Geo", sans-serif;
   font-size: 8rem;
   text-align: center;
+  color:rgb(233, 255, 255);
+  margin-left: 10px;
 }
 
 footer {
@@ -182,6 +198,11 @@ footer {
   flex-wrap: wrap;
   justify-content: space-around;
   font-style: italic;
+  align-content: space-between;
+}
+
+.project {
+    
 }
 
 .project img {
@@ -219,4 +240,7 @@ footer button:hover {
   border-radius: 1rem;
   color: white;
   padding: 1rem;
+  cursor: pointer;
+
+  }
 }
